1.9.2 snapshot